# FVideoEdit

./: README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  FD.c  FVideoFrameBitmap.c  FVideoFrameBitmap.h  JniFVideoFrameBitmap.cpp
android/app/src/main/cpp/ffmpeg/libffmpeg/: config.h
android/app/src/main/jniLibs/armeabi-v7a/: ff_ffplay.c
android/app/src/main/res/drawable/: bg_frame_stroke.xml  bg_gradient.xml  bg_gradient_black.xml  bg_select_num.xml  ic_blur_rect.xml
android/app/src/main/res/drawable-xxhdpi/: ic_full_rect.xml  ic_stroke_rect.xml
android/app/src/main/res/layout/: activity_create_video.xml  activity_edit_video.xml  activity_launch.xml  activity_select_video.xml  activity_test_cmd.xml  item_frame.xml  item_sequence_frame.xml  item_video.xml  layout_edit_frame.xml  layout_edit_video.xml  layout_preview_ijk_video.xml  layout_preview_video.xml  layout_sequence_frame.xml  layout_simple_video.xml
android/app/src/main/res/menu/: titlebar_delete.xml  titlebar_home.xml  titlebar_menu.xml
android/cmd-v7a/: build.gradle
android/cmd-v7a/src/main/: AndroidManifest.xml
android/cmd-v7a/src/main/cpp/: ffmpeg_cmd.c
android/cmd-v8a/: CMakeLists.txt  build.gradle
android/cmd-v8a/src/main/: AndroidManifest.xml
android/cmd-v8a/src/main/cpp/ffmpeg/: cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
android/cmd-v8a/src/main/cpp/include/libffmpeg/: config.h
android/gradle/wrapper/: gradle-wrapper.properties
android/ijkplayer-java/: build.gradle
(+80 files in other folders)
